version: next
- Fix broken path in config.yaml.
- Fix no structure when no indexes.

version: 0.1.15
- Fix missing resources in Gem.

version: 0.1.14
- New config format.

version: 0.1.13
- No changes

version: 0.1.12
- No new features. Fix broken release script.

version: 0.1.11
- Add a server.

version: 0.1.10
- Allow client to specify table_schema.

version: 0.1.9
- Allow sql client to be specified as param.

version: 0.1.8
- Add support for Mysql2.

version: 0.1.7
- Fix bug where squish is called.

version: 0.1.6
- Remove html_safe call. Clients should now do this themselves.

version: 0.1.5
- Allow configuration of max rows.

version: 0.1.4
- Fix bug causing requery and editor reset on back.

version: 0.1.3
- Just some refactoring to serve separate js and css files. No new features.

version: 0.1.2
- get and post methods instead of resource-specific methods (javascript, html, metadata, query)

version: 0.1.1
- Cache metadata.